--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Paranoia8972.dev</title>
+  <title>AsitSonawane.dev</title>
   <meta name="description" content="Terminal Portfolio by Paranoia8972.">
   <meta name="keywords" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
