First release of Hello World!

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>AsitSonawane.dev</title>
-  <meta name="description" content="Terminal Portfolio by Paranoia8972.">
+  <title>Asit Sonawane Resume</title>
+  <meta name="description" content="Asit Sonawane Resume">
   <meta name="keywords" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="favicon.ico" type="image/x-icon"> 
@@ -15,7 +15,8 @@
 
   <header class="site clearfix">
     <div class="col one">
-      <img src="logoDevOps.png" alt="DevOps" width="740" height="729" id="logo-v" />
+      <!-- <img src="logoDevOps.png" alt="DevOps" width="740" height="729" id="logo-v" /> -->
+      <img src="pJqnNvmcXW.gif" alt="DevOps" width="740" height="729" id="logo-v" />
     </div>
     <div class="col two">
       <h4>PortfolioWeb-final4-final-version <br /> Dynamically Automated Evolving Management & Operations Network (DAEMON)</h4>
@@ -43,6 +44,7 @@
     </div>
   </div>
 </div>
+
 
   <script src="script.js"></script>
 </body>
