--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="description" content="Asit Sonawane Resume">
   <meta name="keywords" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" href="favicon.ico" type="image/x-icon"> 
+  <link rel="icon" href="logoDevOps.png" type="image/png">
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
@@ -15,11 +15,13 @@
 
   <header class="site clearfix">
     <div class="col one">
+
       <!-- <img src="logoDevOps.png" alt="DevOps" width="740" height="729" id="logo-v" /> -->
       <img src="pJqnNvmcXW.gif" alt="DevOps" width="740" height="729" id="logo-v" />
     </div>
     <div class="col two">
       <h4>PortfolioWeb-final4-final-version <br /> Dynamically Automated Evolving Management & Operations Network (DAEMON)</h4>
+      <p>The current time is: <time id="currentTime">HH:MM:SS</time></p>
       <p>------------------------------------</p>
       <p>DAEMON v 1.0.0</p>
       <p>(c)2023 Portfolio</p>
