--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
+  <canvas>
+            
+  </canvas>
+
   <div class="overlay"></div>
   <!-- <div class="scanline"></div> -->
 <div class="app">
@@ -47,6 +51,7 @@
   </div>
 </div>
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
 
   <script src="script.js"></script>
 </body>
