--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
   <meta name="description" content="Asit Sonawane Resume">
   <meta name="keywords" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8">
   <link rel="icon" href="logoDevOps.png" type="image/png">
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-  <canvas>
+  <canvas id="matrixCanvas">
             
   </canvas>
 
@@ -24,7 +25,7 @@
       <img src="pJqnNvmcXW.gif" alt="DevOps" width="740" height="729" id="logo-v" />
     </div>
     <div class="col two">
-      <h4>PortfolioWeb-final4-final-version <br /> Dynamically Automated Evolving Management & Operations Network (DAEMON)</h4>
+      <h4>MyPortfolio-final4-final-version <br /> Dynamically Automated Evolving Management & Operations Network (DAEMON)</h4>
       <p>The current time is: <time id="currentTime">HH:MM:SS</time></p>
       <p>------------------------------------</p>
       <p>DAEMON v 1.0.0</p>
@@ -32,12 +33,12 @@
       <p>- Pune, Maharashtra -</p>
     </div>
   </header>
-
+<div class="welcome">
   <p>DevOps Engineer's Integrated Command Center (DEICC)</p>
     <p>DevOps Engineer (DEVOPSEN) - Asit Sonawane</p>
 
     <p>Welcome to the DevOps Engineer's Integrated Command Center (DEICC). Please feel free to explore this OS to learn more. Thank you for visiting.</p><br/>
-  
+  </div>
   <div id="terminal">
     <div id="output">
       <p>Welcome to DAEMON v 1.0.0 (LTS)</p>
